--- a/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/01-Opening-and-Reading-Files-Folders.ipynb
@@ -90,7 +90,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Getting Directories\n",
     "\n",
@@ -103,7 +105,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -113,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -626,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
