--- a/12-Advanced Python Modules/Excercise/01-Opening-and-Reading-Files-Folders.ipynb
+++ b/12-Advanced Python Modules/Excercise/01-Opening-and-Reading-Files-Folders.ipynb
@@ -90,7 +90,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Create Practice File"
    ]
@@ -98,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f = open('practicefile.txt','w')"
@@ -107,7 +111,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -127,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "f.close()"
@@ -136,27 +144,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We will begin by creating a practice text file that we will be using for demonstration."
    ]
@@ -194,12 +210,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Excercise'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
   },
   {
    "cell_type": "code",
@@ -211,13 +251,50 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Listing Files In A Directory"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.ipynb_checkpoints',\n",
+       " '00-Collections-Module.ipynb',\n",
+       " '01-Opening-and-Reading-Files-Folders.ipynb',\n",
+       " '02-Datetime-Module.ipynb',\n",
+       " '03-Math-and-Random-Module.ipynb',\n",
+       " '04-0-Python Debugger (pdb).ipynb',\n",
+       " '04-1-PythonDebugger.py',\n",
+       " '04-Python Debugger (pdb).ipynb',\n",
+       " '05-Overview-of-Regular-Expressions copy.py',\n",
+       " '05-Overview-of-Regular-Expressions.ipynb',\n",
+       " '06-Timing your code - timeit.ipynb',\n",
+       " '07-Unzipping-and-Zipping-Files.ipynb',\n",
+       " 'deflated_content',\n",
+       " 'example.zip',\n",
+       " 'newzipfile.zip',\n",
+       " 'Test.ipynb']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
   },
   {
    "cell_type": "code",
@@ -246,6 +323,130 @@
    "source": [
     "You can use the built-in **shutil** module to to move files to different locations. Keep in mind, there are permission restrictions, for example if you are logged in a User A, you won't be able to make changes to the top level Users folder without the proper permissions, [more info](https://stackoverflow.com/questions/23253439/shutil-movescr-dst-gets-me-ioerror-errno-13-permission-denied-and-3-more-e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "shutil.copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Excercise'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\temp\\\\example.zip'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.copy('example.zip','C:\\\\temp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Excercise\\\\example.zip'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shutil.move('C:\\\\temp\\\\example.zip',os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -279,18 +480,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Walking through a directory"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "\n",
@@ -298,10 +495,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Excercise'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mycurrentdir='C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\\\\n",
+    "Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Example_Top_Level'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Example_Top_Level'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mycurrentdir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mid-Example-One', 'Mid-Example.txt']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(mycurrentdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\n",
+      "\n",
+      "\n",
+      "The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level are :\n",
+      "Mid-Example-One\n",
+      "\t Currntly looking at file Mid-Example.txt\n",
+      "\n",
+      "\n",
+      "Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\n",
+      "\n",
+      "\n",
+      "The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One are :\n",
+      "Bottom-Level-One\n",
+      "\t Currntly looking at file Mid-Level-Doc.txt\n",
+      "\n",
+      "\n",
+      "Bottom-Level-Two\n",
+      "\t Currntly looking at file Mid-Level-Doc.txt\n",
+      "\n",
+      "\n",
+      "Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-One\n",
+      "\n",
+      "\n",
+      "The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-One are :\n",
+      "Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-Two\n",
+      "\n",
+      "\n",
+      "The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-Two are :\n"
+     ]
+    }
+   ],
+   "source": [
+    "for folder,sub_folders,files in os.walk(mycurrentdir):\n",
+    "    print(f\"Currently looking at folder {folder}\")\n",
+    "    print(\"\\n\")\n",
+    "    print(f\"The Sub folders under {folder} are :\")\n",
+    "    for subfolder in sub_folders:\n",
+    "        print (subfolder)\n",
+    "        for f in files:\n",
+    "            print(f\"\\t Currntly looking at file {f}\")\n",
+    "            print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Notes"
    ]
@@ -309,8 +655,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "source": [
     "___\n",
@@ -335,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
