--- a/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
+++ b/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
@@ -491,60 +491,139 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Walking through a directory"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "    for folder , sub_folders , files in os.walk(\"Example_Top_Level\"):\n",
-    "    \n",
-    "    print(\"Currently looking at folder: \"+ folder)\n",
-    "    print('\\n')\n",
-    "    print(\"THE SUBFOLDERS ARE: \")\n",
-    "    for sub_fold in sub_folders:\n",
-    "        print(\"\\t Subfolder: \"+sub_fold )\n",
-    "    \n",
-    "    print('\\n')\n",
-    "    \n",
-    "    print(\"THE FILES ARE: \")\n",
-    "    for f in files:\n",
-    "        print(\"\\t File: \"+f)\n",
-    "    print('\\n')\n",
-    "    \n",
-    "    # Now look at subfolders"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mycurrentdir='C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\\\\n",
+    "Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Example_Top_Level'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    \n",
+    "    for folder,sub_folders,files in os.walk(mycurrentdir):\n",
+    "        print(f\"Currently looking at folder {folder}\")\n",
+    "        print(\"\\n\")\n",
+    "        print(f\"The Sub folders under {folder} are :\")\n",
+    "        for subfolder in sub_folders:\n",
+    "            print (subfolder)\n",
+    "            for f in files:\n",
+    "                print(f\"\\t Currntly looking at file {f}\")\n",
+    "                print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "    Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\n",
+    "\n",
+    "\n",
+    "    The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level are :\n",
+    "    Mid-Example-One\n",
+    "         Currntly looking at file Mid-Example.txt\n",
+    "\n",
+    "\n",
+    "    Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\n",
+    "\n",
+    "\n",
+    "    The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One are :\n",
+    "    Bottom-Level-One\n",
+    "         Currntly looking at file Mid-Level-Doc.txt\n",
+    "\n",
+    "\n",
+    "    Bottom-Level-Two\n",
+    "         Currntly looking at file Mid-Level-Doc.txt\n",
+    "\n",
+    "\n",
+    "    Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-One\n",
+    "\n",
+    "\n",
+    "    The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-One are :\n",
+    "    Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-Two\n",
+    "\n",
+    "\n",
+    "    The Sub folders under C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\\Mid-Example-One\\Bottom-Level-Two are :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Math and random Module"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "import Math help(math) <<< Will list help about this function. >>>\n",
     "Rand number"
@@ -552,9 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## Rand number"
@@ -562,9 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "floor\n",
@@ -603,9 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -732,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
