--- a/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
+++ b/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Collections Module"
    ]
@@ -19,7 +17,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Counter"
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "hidden": true
    },
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "hidden": true
    },
@@ -60,7 +58,7 @@
        "Counter({12: 1, 34: 3, 'Hello': 2, '45': 1, 1: 4, 3: 3, 6: 3, 9: 3})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +467,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -483,15 +480,15 @@
    },
    "source": [
     "    pip install send2trash\n",
-    "\n",
     "    import send2trash\n",
-    "\n",
-    "    send2trash.send2trash('practice.txt')\n"
+    "    send2trash.send2trash('practice.txt')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Walking through a directory"
    ]
@@ -499,20 +496,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "import os\n",
     "os.getcwd()"
@@ -520,7 +523,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "mycurrentdir='C:\\\\Users\\\\SONY\\\\Documents\\\\GitHub\\\\\\\n",
     "Complete-Python-3-Bootcamp\\\\12-Advanced Python Modules\\\\Example_Top_Level'"
@@ -528,7 +533,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    \n",
     "    for folder,sub_folders,files in os.walk(mycurrentdir):\n",
@@ -544,7 +551,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n",
     "    Currently looking at folder C:\\Users\\SONY\\Documents\\GitHub\\Complete-Python-3-Bootcamp\\12-Advanced Python Modules\\Example_Top_Level\n",
@@ -580,7 +589,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "`"
@@ -589,41 +600,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Math and random Module"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "import Math help(math) <<< Will list help about this function. >>>\n",
     "Rand number"
@@ -631,7 +654,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n",
     "## Rand number"
@@ -639,7 +664,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n",
     "floor\n",
@@ -678,7 +705,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -697,13 +726,110 @@
     "hidden": true
    },
    "source": [
-    "    Setting a trace\n",
-    "\n",
-    "    import pdb\n",
-    "    x = [1,2,3]\n",
-    "    y = 2\n",
-    "    z = 3"
+    "    https://docs.python.org/3/library/pdb.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "import pdb\n",
+    "\n",
+    "x = [1,3,4]\n",
+    "y = 2\n",
+    "z = 3\n",
+    "\n",
+    "result = y + z\n",
+    "print(result)\n",
+    "\n",
+    "#Set a trace using Python Debugger\n",
+    "pdb.set_trace()\n",
+    "\n",
+    "result2 = y+x\n",
+    "print(result2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    --Return--\n",
+    "    > <ipython-input-1-6c36e8161fda>(11)<module>()->None\n",
+    "    -> pdb.set_trace()\n",
+    "\n",
+    "    (Pdb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "### pdb was not working with jupyter notebook . Tried in cygwin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "## pdb was not working with jupyter notebook . Tried in cygwin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    \n",
+    "    azi@LAPTOP-1QD0MRUB /cygdrive/c/Users/azi/My Documents/GitHub/Complete-Python-3-Bootcamp/12-Advanced Python Modules/Excercise\n",
+    "    $ python 04-1-PythonDebugger.py\n",
+    "    [12, 'Hello', 30]\n",
+    "    > c:\\users\\azi\\documents\\github\\complete-python-3-bootcamp\\12-advanced python modules\\excercise\\04-1-pythondebugger.py(11)<module>()\n",
+    "    -> print ( a + b)\n",
+    "    (Pdb) print (a)\n",
+    "    [12, 'Hello', 30]\n",
+    "    (Pdb) print(a+b)\n",
+    "    *** TypeError: can only concatenate list (not \"int\") to list\n",
+    "    (Pdb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -730,14 +856,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Zip and Unzip files "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "import os\n",
     "os.getcwd()\n",
@@ -767,21 +897,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
