--- a/Notes from Abdul Azeez.ipynb
+++ b/Notes from Abdul Azeez.ipynb
@@ -14,6 +14,7 @@
    "cell_type": "markdown",
    "id": "characteristic-cartoon",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -41,6 +42,7 @@
    "cell_type": "markdown",
    "id": "developing-launch",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -93,7 +95,6 @@
    "cell_type": "markdown",
    "id": "referenced-gender",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -101,48 +102,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "opposite-south",
+   "cell_type": "markdown",
+   "id": "12467b2f",
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
    "source": [
     "https://www.geeksforgeeks.org/how-to-install-jupyter-notebook-in-windows/\n",
+    "    \n",
     "\n",
-    "PIP is a package management system used to install and manage software packages/libraries written in Python. These files are stored in a large “on-line repository” termed as Python Package Index (PyPI).\n",
-    "pip uses PyPI as the default source for packages and their dependencies.\n",
+    "    PIP is a package management system used to install and manage software packages/libraries written in Python. These files are stored in a large “on-line repository” termed as Python Package Index (PyPI).\n",
+    "    pip uses PyPI as the default source for packages and their dependencies.\n",
     "\n",
-    "To install Jupyter using pip, we need to first check if pip is updated in our system. Use the following command to update pip:\n",
+    "    To install Jupyter using pip, we need to first check if pip is updated in our system. Use the following command to update pip:\n",
     "\n",
-    "python -m pip install --upgrade pip\n",
+    "    python -m pip install --upgrade pip\n",
     "\n",
-    "Updating-pip-version\n",
+    "    Updating-pip-version\n",
     "\n",
-    "After updating the pip version, follow the instructions provided below to install Jupyter:\n",
+    "    After updating the pip version, follow the instructions provided below to install Jupyter:\n",
     "\n",
-    "    Command to install Jupyter:\n",
+    "        Command to install Jupyter:\n",
     "\n",
-    "    python -m pip install jupyter\n",
+    "        python -m pip install jupyter\n",
     "\n",
-    "    Beginning Installation:\n",
-    "    Beginning-installation\n",
-    "    Downloading Files and Data:\n",
-    "    Downloading-data-and-files\n",
-    "    Installing Packages:\n",
-    "    Installing-packages\n",
-    "    Finished Installation:\n",
-    "    Finished-Installation\n",
+    "        Beginning Installation:\n",
+    "        Beginning-installation\n",
+    "        Downloading Files and Data:\n",
+    "        Downloading-data-and-files\n",
+    "        Installing Packages:\n",
+    "        Installing-packages\n",
+    "        Finished Installation:\n",
+    "        Finished-Installation\n",
     "\n",
-    "    Launching Jupyter:\n",
-    "    Use the following command to launch Jupyter using command-line:\n",
+    "        Launching Jupyter:\n",
+    "        Use the following command to launch Jupyter using command-line:\n",
     "\n",
-    "    jupyter notebook\n",
+    "        jupyter notebook\n",
     "\n",
-    "    Using-Launch-command-Code\n",
+    "        Using-Launch-command-Code\n",
     "\n",
-    "    Jupyter-Launch-Window\n",
+    "        Jupyter-Launch-Window\n",
     "\n"
    ]
   },
@@ -233,7 +233,9 @@
   {
    "cell_type": "markdown",
    "id": "universal-syndicate",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# JUPYTER NOTEBOOK THEMES."
    ]
@@ -242,7 +244,8 @@
    "cell_type": "markdown",
    "id": "smoking-transition",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "##### How to Change your Jupyter Notebook Theme (Dark Theme!!)\n",
@@ -262,7 +265,8 @@
    "cell_type": "markdown",
    "id": "ideal-franchise",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "##### 1 * To install jupyter themes ( Install directly from Jupyter notebook):--\n",
@@ -292,7 +296,9 @@
   {
    "cell_type": "markdown",
    "id": "demographic-public",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### To Run from jupyter notebook\n",
     "!jt -t oceans16"
@@ -301,7 +307,9 @@
   {
    "cell_type": "markdown",
    "id": "czech-farming",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://stackoverflow.com/questions/46510192/change-the-theme-in-jupyter-notebook"
    ]
@@ -310,7 +318,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "chemical-trademark",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -318,7 +328,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "concrete-responsibility",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -326,7 +338,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "potential-kernel",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -334,7 +348,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "controversial-aside",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -342,7 +358,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "wanted-shoot",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -350,7 +368,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "filled-tactics",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "!jt -t oceans16"
@@ -360,14 +380,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "reverse-bunny",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
